# rcup_arm_final

./: LICENSE  README.md
arm_message/: CMakeLists.txt  mapping_rules.yaml  package.xml
arm_message/srv/: Pick.srv
arm_urdf/: CMakeLists.txt  package.xml
arm_urdf/config/: display_orient.rviz  mtc.rivz.rviz
arm_urdf/launch/: display.launch.py  pnp_rviz.launch.py
arm_urdf/meshes/: 5thDof_mnt-v2.stl  6Thdof-v2.stl  Base_link1-v1.stl  gripperHousing-v2.stl  left_H-v1.stl  lnk1assm-v2.stl  lnk2_assm-v2.stl  right_H-v1.stl
arm_urdf/rcup_objects/: Axis-1.stl  Bearing(1).stl  Distance_Tube(1).stl  F20_20-1.stl  M20(1).stl  M20_100(2).stl  M30-1.stl  Motor(1).stl  S40_40(1).stl  V20(1).stl
arm_urdf/urdf/: ArmPlate.xacro
arm_urdf_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
arm_urdf_moveit_config/config/: ArmPlate.ros2_control.xacro  ArmPlate.srdf  ArmPlate.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
arm_urdf_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
pick_and_place/: CMakeLists.txt  package.xml
pick_and_place/launch/: pick.launch.py
pick_and_place/src/: mtc.cpp
